added HW40 for swift

--- a/Homework/Swift/HW40/HW40/Base.lproj/Main.storyboard
+++ b/Homework/Swift/HW40/HW40/Base.lproj/Main.storyboard
@@ -28,20 +28,20 @@
         <!--Table View Controller-->
         <scene sceneID="2Yl-uh-TQt">
             <objects>
-                <tableViewController id="jri-Ig-MhK" customClass="RTTableViewController" sceneMemberID="viewController">
+                <tableViewController id="jri-Ig-MhK" customClass="TableViewController" customModule="HW40" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="d1Q-MP-koB">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <button key="tableFooterView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="HRY-Le-WAY">
-                            <rect key="frame" x="0.0" y="294" width="375" height="44"/>
+                            <rect key="frame" x="0.0" y="293.5" width="375" height="44"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="18"/>
                             <state key="normal" title="Reset">
                                 <color key="titleColor" red="0.85043728351593018" green="0.21816034615039825" blue="0.15920260548591614" alpha="1" colorSpace="calibratedRGB"/>
                             </state>
                             <connections>
-                                <action selector="actionReset:" destination="jri-Ig-MhK" eventType="touchUpInside" id="Ks1-E5-cie"/>
+                                <action selector="actionReset:" destination="jri-Ig-MhK" eventType="touchUpInside" id="GEZ-mA-QBg"/>
                             </connections>
                         </button>
                         <sections>
@@ -154,7 +154,7 @@
                                                     </segments>
                                                     <color key="tintColor" red="0.15410047769546509" green="0.41306763887405396" blue="0.69063264131546021" alpha="1" colorSpace="calibratedRGB"/>
                                                     <connections>
-                                                        <action selector="actionGenderChanged:" destination="jri-Ig-MhK" eventType="valueChanged" id="Zs2-9d-Euk"/>
+                                                        <action selector="actionGenderChanged:" destination="jri-Ig-MhK" eventType="valueChanged" id="d4F-mz-DCE"/>
                                                     </connections>
                                                 </segmentedControl>
                                             </subviews>
@@ -179,7 +179,7 @@
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                                                     <color key="tintColor" red="0.19376453757286072" green="0.50850099325180054" blue="0.85232251882553101" alpha="1" colorSpace="calibratedRGB"/>
                                                     <connections>
-                                                        <action selector="actionGradeChanged:" destination="jri-Ig-MhK" eventType="valueChanged" id="ux9-hD-thJ"/>
+                                                        <action selector="actionGradeChanged:" destination="jri-Ig-MhK" eventType="valueChanged" id="6eT-SQ-DnA"/>
                                                     </connections>
                                                 </slider>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="2,5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l6P-1k-yks">
@@ -202,12 +202,12 @@
                     </tableView>
                     <navigationItem key="navigationItem" id="Kav-wH-xxa"/>
                     <connections>
-                        <outlet property="dateOfBirthField" destination="9j2-P3-5aU" id="sM8-W2-Amy"/>
-                        <outlet property="firstNameField" destination="MN0-nQ-YZS" id="OLe-dQ-PeW"/>
-                        <outlet property="genderSegmentedControl" destination="Gv7-TQ-vbP" id="Frh-IN-mhQ"/>
-                        <outlet property="gradeLabel" destination="l6P-1k-yks" id="UHG-Mx-AYA"/>
-                        <outlet property="gradeSlider" destination="qwt-Hx-TWs" id="imh-pk-2BI"/>
-                        <outlet property="lastNameField" destination="uYy-7X-4uO" id="mte-C4-Zv7"/>
+                        <outlet property="dateOfBirthField" destination="9j2-P3-5aU" id="MKj-ej-ncB"/>
+                        <outlet property="firstNameField" destination="MN0-nQ-YZS" id="h7i-gp-h2b"/>
+                        <outlet property="genderSegmentedControl" destination="Gv7-TQ-vbP" id="HaU-bI-u4l"/>
+                        <outlet property="gradeLabel" destination="l6P-1k-yks" id="fua-oy-I7N"/>
+                        <outlet property="gradeSlider" destination="qwt-Hx-TWs" id="hLu-cS-fc4"/>
+                        <outlet property="lastNameField" destination="uYy-7X-4uO" id="vvW-eb-QU0"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JBo-A3-bh9" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -217,7 +217,7 @@
         <!--Date View Controller-->
         <scene sceneID="xU2-iA-hdW">
             <objects>
-                <viewController id="1p3-KW-JzI" customClass="RTDateViewController" sceneMemberID="viewController">
+                <viewController id="1p3-KW-JzI" customClass="DateViewController" customModule="HW40" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="71t-GT-aNX"/>
                         <viewControllerLayoutGuide type="bottom" id="X5M-7P-MxP"/>
@@ -233,7 +233,7 @@
                                     <!--2017-01-19 18:55:50 +0000-->
                                 </date>
                                 <connections>
-                                    <action selector="actionDateChanged:" destination="1p3-KW-JzI" eventType="valueChanged" id="e8k-ez-AOF"/>
+                                    <action selector="actionDateChanged:" destination="1p3-KW-JzI" eventType="valueChanged" id="6gR-hO-Nvc"/>
                                 </connections>
                             </datePicker>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6kL-xa-PVt">
@@ -242,7 +242,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="Done"/>
                                 <connections>
-                                    <action selector="actionDonePressed:" destination="1p3-KW-JzI" eventType="touchUpInside" id="5Qr-OY-BwZ"/>
+                                    <action selector="actionDonePressed:" destination="1p3-KW-JzI" eventType="touchUpInside" id="CBT-fh-dVM"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -255,7 +255,7 @@
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="300" height="250"/>
                     <connections>
-                        <outlet property="datePicker" destination="AYu-f1-Ydx" id="lwx-aY-kBq"/>
+                        <outlet property="datePicker" destination="AYu-f1-Ydx" id="jdT-fd-xHC"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TqJ-lj-PVO" userLabel="First Responder" sceneMemberID="firstResponder"/>
